syntax = "proto3";

package ai.metathings.service.identityd2;

import "model.proto";

message ListEntitiesRequest {
	OpEntity entity = 1;
}

message ListEntitiesResponse {
	repeated Entity entities = 1;
}
